--- a/_posts/2020-10-19-FCFE-1.markdown
+++ b/_posts/2020-10-19-FCFE-1.markdown
@@ -58,4 +58,4 @@ JavaScript 동적으로 컨텐츠를 바꾸고 이동하는 등 여러가지 일
 #### 1회차 인증샷
 ![1회차 인증샷]({{site.baseurl}}/assets/img/FCFE/post1-3.jpg)
 
-올인원 패키지 : 프론트엔드 개발👉https://bit.ly/3m0t8GM
+올인원 패키지 : 프론트엔드 개발👉[https://bit.ly/3m0t8GM](https://bit.ly/3m0t8GM)
