--- a/_posts/2020-10-21-FCFE-3.markdown
+++ b/_posts/2020-10-21-FCFE-3.markdown
@@ -87,4 +87,4 @@ var 이름; // 가능하지만 보통 영문 사용
 ![3회차 인증샷]({{site.baseurl}}/assets/img/FCFE/post3-3.jpg)
 
 
-올인원 패키지 : 프론트엔드 개발👉https://bit.ly/3m0t8GM
+올인원 패키지 : 프론트엔드 개발👉[https://bit.ly/3m0t8GM](https://bit.ly/3m0t8GM)
