--- a/_posts/2020-10-22-FCFE-4.markdown
+++ b/_posts/2020-10-22-FCFE-4.markdown
@@ -42,6 +42,7 @@ function hello(){}
 
 # 08 변수와 상수
 > variable and constant
+
 - 프로그래밍 시 값을 보관소에 저장하는 역할을 하는 것들
 - 모든 자료형 가능
 
@@ -53,7 +54,8 @@ if ((5 + 10) % 5 === 0){
     console.log('야호3');
 }
 ```
-이 경우 매번 `5 + 10` 을 계산할 필요 없이 저장해두면 보다 편리할 것임 => 이때 사용하는 것이 변수/상수 (이 예시는 변하지 않으므로 상수사용이 적절)
+이 경우 매번 `5 + 10` 을 계산할 필요 없이 저장해두면 보다 편리할 것임 
+=> 이때 사용하는 것이 변수/상수 (이 예시는 변하지 않으므로 상수사용이 적절)
 
 ## 상수 constant
 
@@ -84,7 +86,7 @@ if (sum % 5 === 0){
 
 ### let 변수를_지칭하는_이름 = 값;
 - 선언과 동시에 값을 할당할 수 있음
-- **주의** 선언이 되지 않은 변수에 값을 할당할 수 없음
+- **주의!** 선언이 되지 않은 변수에 값을 할당할 수 없음
 
 ```
 const sum = 5 + 10;
@@ -102,7 +104,7 @@ console.log(result);
 ```
 `result`의 값이 변하므로 변수로 선언이 적절
 
-![25 - 08 변수와 상수]({{site.baseurl}}/assets/img/FCFE/post3-2.png)
+![25 - 08 변수와 상수]({{site.baseurl}}/assets/img/FCFE/post4-2.png)
 
 *****
 
@@ -110,4 +112,4 @@ console.log(result);
 ![4회차 인증샷]({{site.baseurl}}/assets/img/FCFE/post4-3.jpg)
 
 
-올인원 패키지 : 프론트엔드 개발👉https://bit.ly/3m0t8GM
+올인원 패키지 : 프론트엔드 개발👉[https://bit.ly/3m0t8GM](https://bit.ly/3m0t8GM)
