--- a/_posts/2020-10-23-FCFE-5.markdown
+++ b/_posts/2020-10-23-FCFE-5.markdown
@@ -82,8 +82,8 @@ function hello2 = () => {
 > 함수 스코프
 
 - 일반적으로 `const`와 `let`처럼 블록 스코프를 가짐 but JS는 **함수 스코프**를 가진 변수 선언 방법인 `var`를 가짐 
-- __ES5__까지 JS의 가장 대표적 선언 방법이었음
-- __ES6__부터 `const`, `let`을 사용 
+- *ES5*까지 JS의 가장 대표적 선언 방법이었음
+- *ES6*부터 `const`, `let`을 사용 
 - **블록스코프**가 보다 직관적으로 코드 이해가 되므로 **함수스코프**보다 많이 사용
 
 
@@ -113,7 +113,7 @@ console.log(b); // b is not defined
 ```
 
 ### var를 블록스코프에서 사용하면?
-1. 블록스코프 _바깥_에서 선언된 `var` 변수를 블록 _안_에서 사용하는 경우
+1. 블록스코프 *바깥*에서 선언된 `var` 변수를 블록 *안*에서 사용하는 경우
 - 아래와 같은 코드는 블록스코프 변수인 `const`와 `let`처럼 `var`도 문제가 없음
 
 ```
@@ -126,7 +126,7 @@ var c = 0;
 }
 ```
 
-2. 블록스코프 _안_에서 선언된 변수 `var`를 블록 _바깥_에서 사용하는 경우
+2. 블록스코프 *안*에서 선언된 변수 `var`를 블록 *바깥*에서 사용하는 경우
 - `var`는 블록스코프는 영향을 미치지 않음
 
 ```
