--- a/_posts/2020-10-25-FCFE-7.markdown
+++ b/_posts/2020-10-25-FCFE-7.markdown
@@ -30,6 +30,7 @@ if (n % 3 === 0){
 }
 ```
 - 3의 배수 이면서 5의 배수이면? 위 코드에서는 *'n은 3의 배수입니다.'* 출력
+   
 - 더 좁은 범위를 먼저 씀!
     ```
     if (n % 3 === 0 && n % 5 === 0){
@@ -42,8 +43,8 @@ if (n % 3 === 0){
         console.log('n은 3의 배수도 아니고, 5의 배수도 아닙니다.');
     }
     ```
-
-- `n % 3 === 0` 과 `n % 5 === 0` 의 값이 여러 번 반복되므로, 변수나 상수에 넣습니다.
+   
+- `n % 3 === 0` 과 `n % 5 === 0` 이 여러 번 반복되므로, *변수*나 *상수*에 넣습니다.
     ```
     const multipleOfThree = (n % 3 === 0);
     const multipleOfFive = (n % 5 === 0);
@@ -58,7 +59,7 @@ if (n % 3 === 0){
         console.log('n은 3의 배수도 아니고, 5의 배수도 아닙니다.');
     }
     ```
-
+   
 - 중첩을 이용해서 표현할 수도 있습니다.
     ```
     const multipleOfThree = (n % 3 === 0);
@@ -76,18 +77,22 @@ if (n % 3 === 0){
         }
     }
     ```
-
-
+   
+   
 ![25 - 13 조건문-2]({{site.baseurl}}/assets/img/FCFE/post7-1.png)
-   
-   
-   
+        
+     
+     
+       
+     
 # 14 조건문-3
 ## 논리 연산자를 이용한 조건문 평가
 > `&&`, `||`, `!`
+   
+boolean 으로 써있는 부분이 모두 표현식이라 가정
 
-- boolean 으로 써있는 부분이 모두 표현식이라 가정
 ### &&
+
 ```
 if (true && true) { 
     console.log('두 개 모두 참이면 참');
@@ -105,8 +110,10 @@ if (false && false){
     console.log('두 개 모두 거짓이면 거짓');
 }
 ```
-
+   
+   
 ### ||
+
 ```
 if (true || true) { 
     console.log('두 개 모두 참이면 참');
@@ -125,7 +132,9 @@ if (false || false){
 }
 ```
 
+   
 # !
+
 ```
 if (!true){
     console.log('참이면 거짓');
@@ -135,8 +144,10 @@ if (!false){
 }
 ```
 
+   
 ## 논리 연산자를 이용한 조건부 실행
 > 표현식 && 표현식
+
 - 둘 다 참 일때만 참이다.
 - 표현식은 앞에 먼저 평가하고 뒤를 평가
 - 앞 표현식이 참일 때 만, 뒤 표현식 평가 = 앞 표현식이 거짓일 땐 뒤 표현식 평가 X
@@ -152,6 +163,7 @@ n = 6;
 ```
 
 > 표현식 || 표현식
+
 - 둘 중 하나만 참이면 참
 - 앞 표현식이 참이면 뒤 표현식 평가할 필요 X
 
@@ -162,12 +174,9 @@ let n = 5;
 n = 6;
 (n % 5 === 0) || console.log('5로 나누어 떨어질때만 실행'); // '5로 나누어 떨어질때만 실행' 출력
 ```
+   
 
-
-
-
-
-
+   
 ![25 - 14 조건문-3]({{site.baseurl}}/assets/img/FCFE/post7-2.png)
    
    
