--- a/_posts/2020-10-25-FCFE-7.markdown
+++ b/_posts/2020-10-25-FCFE-7.markdown
@@ -146,7 +146,7 @@ if (!false){
 
    
 ## 논리 연산자를 이용한 조건부 실행
-> 표현식 && 표현식
+> 표현식 `&&` 표현식
 
 - 둘 다 참 일때만 참이다.
 - 표현식은 앞에 먼저 평가하고 뒤를 평가
@@ -162,7 +162,7 @@ n = 6;
 (n % 5 === 0) && console.log('5로 나누어 떨어질때만 실행'); // 출력 없음
 ```
 
-> 표현식 || 표현식
+> 표현식 `||` 표현식
 
 - 둘 중 하나만 참이면 참
 - 앞 표현식이 참이면 뒤 표현식 평가할 필요 X
@@ -176,7 +176,7 @@ n = 6;
 ```
    
 
-   
+
 ![25 - 14 조건문-3]({{site.baseurl}}/assets/img/FCFE/post7-2.png)
    
    
