--- a/_posts/2020-11-01-FCFE-14.markdown
+++ b/_posts/2020-11-01-FCFE-14.markdown
@@ -39,9 +39,9 @@ new Promise(/* executor */(resolve, reject) => {});
 new Promise((resolve, reject)=>{}); // pending 도입
 ```
 
-- `executor` 함수 인자 중 하나인 `resolve` 함수를 실행하면, fulfilled(이행) 상태가 됩니다.
-```
+- `executor` 함수 인자 중 하나인 `resolve` 함수를 실행하면, fulfilled(이행) 상태가 됩니다.   
 
+```
 new Promise((resolve, reject)=>{
     // pending 상태
     // 비동기적 처리 상황
@@ -50,7 +50,7 @@ new Promise((resolve, reject)=>{
 
 }); 
 ```
-
+   
 - `executor` 함수 인자 중 하나인 `reject` 함수를 실행하면, rejected(거부) 상태가 됩니다.
 ```
 new Promise((resolve, reject)=>{
@@ -58,11 +58,11 @@ new Promise((resolve, reject)=>{
 
 }); 
 ```
-
+   
 - `p` 라는 객체는 1000ms(1초)후에 fulfilled 됩니다.
-- `p` 라는 프로미스 객체가 fulfilled 되는 시점에 `p.then` 안에 설정한 callback 함수가 실행됩니다.
-```
+- `p` 라는 프로미스 객체가 fulfilled 되는 시점에 `p.then` 안에 설정한 callback 함수가 실행됩니다.   
 
+```
 const p = new Promise((resolve, reject) => {
     //pending
 
@@ -102,6 +102,7 @@ p.then(() => { //fulfilled 이후 실행 = callback 작성
     console.log('1000ms후에 fulfilled 됩니다.');
 })
 ```
+
 **결과**    
 (1초 후에)1000ms후에 fulfilled 됩니다.   
 
@@ -124,7 +125,7 @@ p().then(() => {
     console.log('1000ms 후에 fulfilled!');
 });
 ```
-
+   
 프로미스 객체가 rejected 되는 시점에 `p.catch` 안에 설정한 callback 함수가 실행됩니다.
 
 ```
@@ -145,7 +146,7 @@ p().then(() => {
     console.log('1000ms 후에 rejected');
 });
 ```
-
+   
 executor의 resolve 함수를 실행할 때 인자를 넣어 실행하면, `then` 의 callback 함수의 인자로 받을 수 있습니다.
 ```
 function p() {
@@ -185,8 +186,9 @@ p().then((message) => {
     console.log('1000ms 후에 rejected', reason);
 });
 ```
-
+   
 하지만 JS의 error 객체를 사용하는게 일반적
+
 ```
 function p() {
     return new Promise((resolve, reject) => {
@@ -205,10 +207,11 @@ p().then((message) => {
     console.log('1000ms 후에 rejected', error);
 });
 ```
+   
 **결과**     
 1000ms 후에 rejected Error: bad     
     at Timeout._onTimeout (/Users/mijeong/Desktop/gitblog/FCFE/clip3.js:22:20)
-    at listOnTimeout (node:internal/timers:555:17)
+4    at listOnTimeout (node:internal/timers:555:17)
     at processTimers (node:internal/timers:498:7)
 
 ![25 - 30 Promise 2]({{site.baseurl}}/assets/img/FCFE/post14-2.png)
