--- a/_posts/2020-11-04-FCFE-17.markdown
+++ b/_posts/2020-11-04-FCFE-17.markdown
@@ -40,22 +40,22 @@ API를 이해하는 시간 필요~
 ## axios
 
 > Promise based HTTP client for the browser and node.js
+> [axios - github 페이지](https://github.com/axios/axios)
 
 - HTTP 프로토콜을 이용해서 데이터를 요청하고 받아올 수 있는 라이브러리
 - 모든 메소드가 `Promise` 형태로 지원
 
 템플릿은 [부트스트랩](https://getbootstrap.com/) 이용
 
-[axios - github 페이지](https://github.com/axios/axios)
 ![25 - 36 리스트 페이지 - bootstrap starter]({{site.baseurl}}/assets/img/FCFE/post17-3.png)
 
 - css는 cdn(웹)에 있는 파일 사용
-  > CDN? Contents Delivery Network
+  > CDN? Contents Delivery Network  
   > 콘텐츠를 효율적으로 전달하기 위해 여러 노드를 가진 네트워크에 데이터를 저장하여 제공하는 시스템을 말한다.
 - 사용해야할 스타일이 있을 시 `<link rel="stylesheet" type="text/css" href="css/index.css" >` 와 같이 입력 후 사용
 - `<body>` 가 문서 작성 내용
 - JS는 바디 아랫쪽에 있음
-- jqeury, popper.min.js, bootstrap.min.js 라는 JS 라이브러리 사용 -> 모두 웹을 통해 받아옴
+- `jqeury`, `popper.min.js`, `bootstrap.min.js` 라는 JS 라이브러리 사용 -> 모두 웹을 통해 받아옴
 - `<script src="js/index.js></script>` 가 JS작성할 부분
 
 <br>
