--- a/_posts/2020-10-26-FCFE-08.markdown
+++ b/_posts/2020-10-26-FCFE-08.markdown
@@ -8,95 +8,96 @@ tags: [패스트캠퍼스, FastCampus, Front-End, 인강, JavaScript]
 ---
 
 강의
+
 - [25 - 15 조건문-4](#15-조건문-4)
 - [25 - 16 반복문-1](#16-반복문-1)
 
-*****
+---
 
 # 15 조건문-4
 
 ## 삼항 연산자를 이용한 조건부 실행
 
-```
+```jsx
 let n = 5;
 
-console.log(n % 5 === 0 ? '5의 배수입니다.' : '5의 배수가 아닙니다.');
+console.log(n % 5 === 0 ? "5의 배수입니다." : "5의 배수가 아닙니다.");
 ```
 
 '5의 배수입니다.' 출력
 아래 코드도 동일함!
 
-```
-const message = n % 5 === 0 ? '5의 배수입니다.' : '5의 배수가 아닙니다.';
+```jsx
+const message = n % 5 === 0 ? "5의 배수입니다." : "5의 배수가 아닙니다.";
 console.log(message);
 ```
-   
-   
+
 ## switch 를 이용한 조건문
 
 ### default
-```
+
+```jsx
 let m = 5;
 
-switch (m){
-    default: // 어떤 경우에도 해당하지 않을 때, {}로도 사용가능
-        console.log(m);
+switch (m) {
+  default:
+    // 어떤 경우에도 해당하지 않을 때, {}로도 사용가능
+    console.log(m);
 }
 ```
 
 아래 경우 `case 0` 과 `default` 모두 실행됨
-   
-```
+
+```jsx
 let m = 5;
 
-switch (m % 5){
-    case 0:{
-        console.log('5의 배수입니다.');
-    }
+switch (m % 5) {
+  case 0: {
+    console.log("5의 배수입니다.");
+  }
 
-    default:
-        console.log(m);
+  default:
+    console.log(m);
 }
 ```
 
 `case 0` 실행시 `default` 실행을 원치 않을 경우 `break` 사용해야 함
 
-```
+```jsx
 let m = 5;
-switch (m % 5){
-    case 0:{
-        console.log('5의 배수입니다.');
-        break;
-    }
+switch (m % 5) {
+  case 0: {
+    console.log("5의 배수입니다.");
+    break;
+  }
 
-    default:
-        console.log(m);
+  default:
+    console.log(m);
 }
 ```
-   
-다른 경우 추가해보자
-```
-let m = 1;
-switch (m % 5){
-    case 0:{
-        console.log('5의 배수입니다.');
-        break;
-    }
-    case 1:
-    case 2:
-    case 3:
-    case 4:
-        console.log('5의 배수가 아닙니다.');
 
-    default:
-        console.log(m);
+다른 경우 추가해보자
+
+```jsx
+let m = 1;
+switch (m % 5) {
+  case 0: {
+    console.log("5의 배수입니다.");
+    break;
+  }
+  case 1:
+  case 2:
+  case 3:
+  case 4:
+    console.log("5의 배수가 아닙니다.");
+
+  default:
+    console.log(m);
 }
 ```
 
 `5의 배수가 아닙니다. 1`을 출력함!
 
-   
-   
 ![25 - 15 조건문-4]({{site.baseurl}}/assets/img/FCFE/post8-1.png)
 <br>
 <br>
@@ -106,106 +107,112 @@ switch (m % 5){
 
 # 16 반복문-1
 
-```
+```jsx
 for (초기화 ; 반복 조건 ; 반복된 후 실행되는 코드){
     반복되는 코드 블럭
 }
 ```
 
-```
-for (a ; b ; c){
-    d
+```jsx
+for (a; b; c) {
+  d;
 }
-e
+e;
 ```
 
 a -> d -> c -> b(평가) -> d -> c -> b -> e
 
 ### 초기화
+
 - 초기화 하면서 선언된 변수를 중괄호 안 반복 블럭에서 사용 가능
 
-```
-for (let i = 0 ; i < 5 ; i++){
-    console.log('안녕하세요', i);
+```jsx
+for (let i = 0; i < 5; i++) {
+  console.log("안녕하세요", i);
 }
 
-for (let i = 0, j = 2 ; i < 5 ; i++, j = j*j){
-    console.log(i, j);
+for (let i = 0, j = 2; i < 5; i++, j = j * j) {
+  console.log(i, j);
 }
 ```
 
-**결과**   
-0 2   
-1 4   
-2 16   
-3 256   
-4 65536   
-
+**결과**  
+0 2  
+1 4  
+2 16  
+3 256  
+4 65536
 
 ### break
+
 반복문을 즉시 종료
 
-```
-for (let i = 0; i < 5 ; i++){
-    console.log(i);
-    if (i > 2){
-        break;
-    }
-    console.log('안녕하세요', i);
+```jsx
+for (let i = 0; i < 5; i++) {
+  console.log(i);
+  if (i > 2) {
+    break;
+  }
+  console.log("안녕하세요", i);
 }
 ```
-**결과**   
-0   
-안녕하세요 0   
-1   
-안녕하세요 1   
-2   
+
+**결과**  
+0  
+안녕하세요 0  
+1  
+안녕하세요 1  
+2
 
 ### continue
+
 해당 블럭만 종료 후 다음 반복으로 넘어감
 
-```
-for (let i = 0 ; i < 5 ; i++){
-    console.log(i);
-    if (i < 2){
-        continue;
-    }
-    console.log('안녕하세요', i);
+```jsx
+for (let i = 0; i < 5; i++) {
+  console.log(i);
+  if (i < 2) {
+    continue;
+  }
+  console.log("안녕하세요", i);
 }
 ```
 
-**결과**   
-0   
-1   
-2   
-안녕하세요 2   
-3   
-안녕하세요 3   
-4   
-안녕하세요 4   
+**결과**  
+0  
+1  
+2  
+안녕하세요 2  
+3  
+안녕하세요 3  
+4  
+안녕하세요 4
 
 ### 무한루프
 
 반복문 안에 종료 조건이 들어가야 함! > 없으면 무한루프
 
-```
-for (;;){
-    console.log('안녕하세요~');
-    if (Math.random() * 100 > 90){
-        break;
-    }
+```jsx
+for (;;) {
+  console.log("안녕하세요~");
+  if (Math.random() * 100 > 90) {
+    break;
+  }
 }
 ```
+
 랜덤하게 종료됨
 
-
 ![25 - 16 반복문-1]({{site.baseurl}}/assets/img/FCFE/post8-2.png)
-*****
-<br>   
+
+---
+
+<br>
 
 #### 8회차 인증샷
+
 ![8회차 인증샷]({{site.baseurl}}/assets/img/FCFE/post8.jpg)
-<br>   
-<br>   
+<br>  
+<br>
 
 올인원 패키지 : 프론트엔드 개발👉[https://bit.ly/3m0t8GM](https://bit.ly/3m0t8GM)
